# ChangeLog for app-text/djvu
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/ChangeLog,v 1.146 2013/06/02 08:38:12 ago Exp $

  02 Jun 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for sh, wrt bug #461076

  25 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for sparc, wrt bug #461076

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for s390, wrt bug #461076

  20 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for x86, wrt bug #461076

  18 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for alpha, wrt bug #461076

  17 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for ia64, wrt bug #461076

  17 May 2013; Jeroen Roovers <jer@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for HPPA (bug #461076).

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for arm, wrt bug #461076

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for ppc64, wrt bug #461076

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for ppc, wrt bug #461076

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
  Stable for amd64, wrt bug #461076

  21 Mar 2013; Samuli Suominen <ssuominen@gentoo.org> djvu-3.5.25.3.ebuild:
  Use prune_libtool_files to remove unnecessary libtool archive (.la) of
  libdjvulibre.

  16 Feb 2013; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Cleanup due bug #96436

  19 Dec 2012;  <qnikst@gentoo.org> djvu-3.5.25.3.ebuild:
  fix build time dependency #446370

*djvu-3.5.25.3 (05 Dec 2012)

  05 Dec 2012; Jeroen Roovers <jer@gentoo.org> files/djvu-3.5.24-gcc46.patch,
  +djvu-3.5.25.3.ebuild:
  Version bump.

  13 Sep 2012; Christoph Junghans <ottxor@gentoo.org> djvu-3.5.24-r1.ebuild:
  added prefix keywords
