@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/djvu-3.5.25.3.ebuild,v 1.14 2013/06/02 08:38:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/djvu-3.5.25.3.ebuild,v 1.15 2013/08/27 16:03:07 kensington Exp $
 
 EAPI=5
 inherit autotools eutils fdo-mime flag-o-matic
@@ -16,7 +16,7 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ~mips ppc ppc64 s390 sh sparc x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-solaris"
 IUSE="debug doc jpeg tiff xml"
 
-RDEPEND="jpeg? ( virtual/jpeg )
+RDEPEND="jpeg? ( virtual/jpeg:0 )
 	tiff? ( media-libs/tiff:0= )"
 DEPEND="${RDEPEND}
 	|| ( gnome-base/librsvg media-gfx/inkscape )"
