@@ -1,6 +1,10 @@
 # ChangeLog for app-text/djvu
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/ChangeLog,v 1.146 2013/06/02 08:38:12 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/djvu/ChangeLog,v 1.147 2013/08/27 16:03:07 kensington Exp $
+
+  27 Aug 2013; Michael Palimaka <kensington@gentoo.org> djvu-3.5.24-r1.ebuild,
+  djvu-3.5.25.3.ebuild:
+  Pin virtual/jpeg SLOT to 0.
 
   02 Jun 2013; Agostino Sarubbo <ago@gentoo.org> djvu-3.5.25.3.ebuild:
   Stable for sh, wrt bug #461076
